# stella-implementation-in-cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: Interpret.cpp  StateTypeChecker.cpp  StateTypeChecker.h  TypeCheck.cpp  TypeCheck.h  VisitTypeCheck.cpp  VisitTypeCheck.h
src/Stella/: Absyn.C  Absyn.H  Bison.H  Buffer.C  Buffer.H  Lexer.C  Parser.C  Parser.H  ParserError.H  Printer.C  Printer.H  Skeleton.C  Skeleton.H  Test.C
tests/well-typed/: list-op.stella  logic-cmp.stella
